syntax = "proto3";

option csharp_namespace = "Spravy.ToDo.Protos";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

package spravy.to_do;

message UpdateToDoItemLinkRequest {
  bytes Id = 1;
  string Link = 2;
}

message UpdateToDoItemLinkReply {

}

message GetActiveItemRequest {
  google.protobuf.Duration Offset = 1;
}

message GetActiveItemReply {
  ActiveToDoItemGrpc Item = 1;
}

message GetSiblingsRequest {
  bytes Id = 1;
}

message GetSiblingsReply {
  repeated ToDoShortItemGrpc Items = 1;
}

message ToDoShortItemGrpc {
  bytes Id = 1;
  string Name = 2;
}

message UpdateToDoItemChildrenTypeRequest {
  bytes Id = 1;
  ToDoItemChildrenTypeGrpc Type = 2;
}

message UpdateToDoItemChildrenTypeReply {
  
}

message UpdateToDoItemYearsOffsetRequest {
  bytes Id = 1;
  uint32 Years = 2;
}

message UpdateToDoItemYearsOffsetReply {
}

message UpdateToDoItemWeeksOffsetRequest {
  bytes Id = 1;
  uint32 Weeks = 2;
}

message UpdateToDoItemWeeksOffsetReply {
}

message UpdateToDoItemMonthsOffsetRequest {
  bytes Id = 1;
  uint32 Months = 2;
}

message UpdateToDoItemMonthsOffsetReply {
}

message UpdateToDoItemDaysOffsetRequest {
  bytes Id = 1;
  uint32 Days = 2;
}

message UpdateToDoItemDaysOffsetReply {
}

message ToDoItemToStringRequest {
  bytes Id = 1;
  repeated ToDoItemStatusGrpc Statuses = 2;
  google.protobuf.Duration Offset = 3;
}

message ToDoItemToStringReply {
    string Value = 1;
}

message ToDoItemToRootRequest {
  bytes Id = 1;
}

message ToDoItemToRootReply {
}

message UpdateToDoItemParentRequest {
  bytes Id = 1;
  bytes ParentId = 2;
}

message UpdateToDoItemParentReply {
}

message GetToDoSelectorItemsRequest {
  repeated bytes IgnoreIds = 1;
}

message GetToDoSelectorItemsReply {
  repeated ToDoSelectorItemGrpc Items = 1;
}

message ToDoSelectorItemGrpc {
  bytes Id = 1;
  string Name = 2;
  repeated ToDoSelectorItemGrpc Children = 3;
}

message GetLeafToDoSubItemsRequest {
  bytes Id = 1;
  google.protobuf.Duration Offset = 2;
}

message GetLeafToDoSubItemsReply {
  repeated ToDoSubItemGrpc Items = 1;
}

message UpdateToDoItemWeeklyPeriodicityRequest {
  bytes Id = 1;
  WeeklyPeriodicityGrpc Periodicity = 2;
}

message UpdateToDoItemWeeklyPeriodicityReply {
}

message UpdateToDoItemMonthlyPeriodicityRequest {
  bytes Id = 1;
  MonthlyPeriodicityGrpc Periodicity = 2;
}

message UpdateToDoItemMonthlyPeriodicityReply {
}

message UpdateToDoItemAnnuallyPeriodicityRequest {
  bytes Id = 1;
  AnnuallyPeriodicityGrpc Periodicity = 2;
}

message UpdateToDoItemAnnuallyPeriodicityReply {
}

message ActiveToDoItemGrpc {
  bytes Id = 1;
  string Name = 2;
}

message GetFavoriteToDoItemsRequest {
  google.protobuf.Duration Offset = 1;
}

message GetFavoriteToDoItemsReply {
  repeated ToDoSubItemGrpc Items = 1;
}

message RemoveFavoriteToDoItemRequest {
  bytes Id = 1;
}

message RemoveFavoriteToDoItemReply {
}

message AddFavoriteToDoItemRequest {
  bytes Id = 1;
}

message AddFavoriteToDoItemReply {
}

message SearchToDoSubItemsRequest {
  string SearchText = 1;
  google.protobuf.Duration Offset = 2;
}

message SearchToDoSubItemsReply {
  repeated ToDoSubItemGrpc Items = 1;
}

message FailToDoItemRequest {
  bytes Id = 1;
  google.protobuf.Duration Offset = 2;
}

message FailToDoItemReply {
}

message SkipToDoItemRequest {
  bytes Id = 1;
  google.protobuf.Duration Offset = 2;
}

message SkipToDoItemReply {
}

message UpdateToDoItemDescriptionRequest {
  bytes Id = 1;
  string Description = 2;
}

message UpdateToDoItemDescriptionReply {
}

message UpdateToDoItemOrderIndexRequest {
  bytes Id = 1;
  bytes TargetId = 2;
  bool IsAfter = 3;
}

message UpdateToDoItemOrderIndexReply {
}

message UpdateToDoItemTypeRequest {
  bytes Id = 1;
  ToDoItemTypeGrpc Type = 2;
}

message UpdateToDoItemTypeReply {
  
}

message UpdateToDoItemNameRequest {
  bytes Id = 1;
  string Name = 2;
}

message UpdateToDoItemNameReply {
}

message UpdateToDoItemCompleteStatusRequest {
  bytes Id = 1;
  bool IsCompleted = 2;
  google.protobuf.Duration Offset = 3;
}

message UpdateToDoItemCompleteStatusReply {
}

message UpdateToDoItemDueDateRequest {
  bytes Id = 1;
  google.protobuf.Timestamp DueDate = 2;
}

message UpdateToDoItemDueDateReply {
}

message UpdateToDoItemTypeOfPeriodicityRequest {
  bytes Id = 1;
  TypeOfPeriodicityGrpc Type = 2;
}

message UpdateToDoItemTypeOfPeriodicityReply {
}

message DeleteToDoItemRequest {
  bytes Id = 1;
}

message DeleteToDoItemReply {
}

message AddToDoItemRequest {
  bytes ParentId = 1;
  string Name = 2;
  ToDoItemTypeGrpc Type = 3;
  google.protobuf.Duration Offset = 4;
}

message AddToDoItemReply {
  bytes Id = 1;
}

message AddRootToDoItemRequest {
  string Name = 1;
  ToDoItemTypeGrpc Type = 2;
}

message AddRootToDoItemReply {
  bytes Id = 1;
}

message GetToDoItemRequest {
  bytes Id = 1;
  google.protobuf.Duration Offset = 2;
}

message GetToDoItemReply {
  ToDoItemGrpc Item = 1;
}

message ToDoItemGrpc {
  bytes Id = 1;
  string Name = 2;
  repeated ToDoSubItemGrpc Items = 3;
  repeated ToDoItemParentGrpc Parents = 4;
  string Description = 5;
  bool IsFavorite = 8;
  string Link = 12;

  oneof Parameters {
    ToDoItemValueGrpc Value = 6;
    ToDoItemGroupGrpc Group = 7;
    ToDoItemPlannedGrpc Planned = 9;
    ToDoItemPeriodicityGrpc Periodicity = 10;
    ToDoItemPeriodicityOffsetGrpc PeriodicityOffset = 11;
    ToDoItemCircleGrpc Circle = 13;
    ToDoItemStepGrpc Step = 14;
  }
}

message ToDoItemPlannedGrpc {
  google.protobuf.Timestamp DueDate = 1;
  bool IsCompleted = 2;
  uint32 CompletedCount = 3;
  uint32 SkippedCount = 4;
  uint32 FailedCount = 5;
  ToDoItemChildrenTypeGrpc ChildrenType = 6;
}

message ToDoItemCircleGrpc {
  google.protobuf.Timestamp DueDate = 1;
  bool IsCompleted = 2;
  ToDoItemChildrenTypeGrpc ChildrenType = 3;
}

message ToDoItemStepGrpc {
  google.protobuf.Timestamp DueDate = 1;
  bool IsCompleted = 2;
  ToDoItemChildrenTypeGrpc ChildrenType = 3;
}

message ToDoItemPeriodicityGrpc {
  google.protobuf.Timestamp DueDate = 1;
  ToDoItemChildrenTypeGrpc ChildrenType = 6;

  oneof Periodicity {
    DailyPeriodicityGrpc Daily = 2;
    WeeklyPeriodicityGrpc Weekly = 3;
    MonthlyPeriodicityGrpc Monthly = 4;
    AnnuallyPeriodicityGrpc Annually = 5;
  }
}

message ToDoItemGroupGrpc {
}

message GetRootToDoSubItemsRequest {
  google.protobuf.Duration Offset = 1;
}

message GetRootToDoSubItemsReply {
  repeated ToDoSubItemGrpc Items = 1;
}

message ToDoSubItemGrpc {
  bytes Id = 1;
  string Name = 2;
  uint32 OrderIndex = 3;
  ToDoItemStatusGrpc Status = 4;
  string Description = 5;
  bool IsFavorite = 8;
  ActiveToDoItemGrpc Active = 9;
  string Link = 12;

  oneof Parameters {
    ToDoSubItemValueGrpc Value = 6;
    ToDoSubItemGroupGrpc Group = 7;
    ToDoSubItemPlannedGrpc Planned = 10;
    ToDoSubItemPeriodicityGrpc Periodicity = 11;
    ToDoSubItemPeriodicityOffsetGrpc PeriodicityOffset = 13;
    ToDoSubItemCircleGrpc Circle = 14;
    ToDoSubItemStepGrpc Step = 15;
  }
}

message ToDoSubItemPeriodicityGrpc {
  google.protobuf.Timestamp DueDate = 1;
  uint32 CompletedCount = 2;
  uint32 SkippedCount = 3;
  uint32 FailedCount = 4;
  DateTimeOffsetGrpc LastCompleted = 9;

  oneof Periodicity {
    DailyPeriodicityGrpc Daily = 5;
    WeeklyPeriodicityGrpc Weekly = 6;
    MonthlyPeriodicityGrpc Monthly = 7;
    AnnuallyPeriodicityGrpc Annually = 8;
  }
}

message ToDoSubItemPlannedGrpc {
  bool IsCompleted = 1;
  google.protobuf.Timestamp DueDate = 2;
  uint32 CompletedCount = 3;
  uint32 SkippedCount = 4;
  uint32 FailedCount = 5;
  DateTimeOffsetGrpc LastCompleted = 6;
}

message ToDoSubItemGroupGrpc {
}

message ToDoSubItemValueGrpc {
  bool IsCompleted = 1;
  uint32 CompletedCount = 2;
  uint32 SkippedCount = 3;
  uint32 FailedCount = 4;
  DateTimeOffsetGrpc LastCompleted = 5;
}

message ToDoSubItemCircleGrpc {
  bool IsCompleted = 1;
  uint32 CompletedCount = 2;
  uint32 SkippedCount = 3;
  uint32 FailedCount = 4;
  DateTimeOffsetGrpc LastCompleted = 5;
}

message ToDoSubItemStepGrpc {
  bool IsCompleted = 1;
  uint32 CompletedCount = 2;
  uint32 SkippedCount = 3;
  uint32 FailedCount = 4;
  DateTimeOffsetGrpc LastCompleted = 5;
}

message ToDoItemParentGrpc {
  bytes Id = 1;
  string Name = 2;
}

message ToDoItemValueGrpc {
  google.protobuf.Timestamp DueDate = 1;
  bool IsCompleted = 2;
  ToDoItemChildrenTypeGrpc ChildrenType = 3;
}

message DateTimeOffsetGrpc {
  google.protobuf.Timestamp Date = 1;
  google.protobuf.Duration Offset = 2;
}

enum TypeOfPeriodicityGrpc {
  Daily = 0;
  Weekly = 1;
  Monthly = 2;
  Annually = 3;
}

message DailyPeriodicityGrpc {
}

message ToDoSubItemPeriodicityOffsetGrpc {
  google.protobuf.Timestamp DueDate = 1;
  uint32 CompletedCount = 2;
  uint32 SkippedCount = 3;
  uint32 FailedCount = 4;
  DateTimeOffsetGrpc LastCompleted = 5;
}

message ToDoItemPeriodicityOffsetGrpc {
  uint32 DaysOffset = 1;
  uint32 MonthsOffset= 2;
  uint32 WeeksOffset = 3;
  uint32 YearsOffset = 4;
  google.protobuf.Timestamp DueDate = 5;
  ToDoItemChildrenTypeGrpc ChildrenType = 6;
}

message MonthlyPeriodicityGrpc {
  bytes Days = 1;
}

message WeeklyPeriodicityGrpc {
  repeated DayOfWeekGrpc Days = 1;
}

message AnnuallyPeriodicityGrpc {
  repeated DayOfYearGrpc Days = 1;
}

message DayOfYearGrpc {
  uint32 Month = 1;
  uint32 Day = 2;
}

enum DayOfWeekGrpc {
  Sunday = 0;
  Monday = 1;
  Tuesday = 2;
  Wednesday = 3;
  Thursday = 4;
  Friday = 5;
  Saturday = 6;
}

enum ToDoItemStatusGrpc {
  StatusMiss = 0;
  StatusReadyForComplete = 1;
  StatusPlanned = 2;
  StatusCompleted = 3;
}

enum ToDoItemTypeGrpc {
  Value = 0;
  Group = 1;
  Planned = 2;
  Periodicity = 3;
  Circle = 4;
  Step = 5;
}

enum ToDoItemChildrenTypeGrpc {
  RequireCompletion = 0;
  IgnoreCompletion = 1;
}